<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/gallery"
        android:title="Gallery"
        android:icon="@drawable/gallery_icon"/>
    <item
        android:id="@+id/draw"
        android:title="Draw"
        android:icon="@drawable/create_icon"/>
    <item
        android:id="@+id/mypage"
        android:title="My page"
        android:icon="@drawable/family_icon"/>
</menu>