<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modal_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_start_drawing_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_close"
        android:backgroundTint="@color/icon_color"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Close" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What would you like to do?"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp">
    </TextView>

    <LinearLayout
        android:id="@+id/creating_drawing_option_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/modal_btn">

        <ImageView
            android:id="@+id/create_drawing_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_create_drawing"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_gravity="center"
            android:id="@+id/create_drawing_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create a drawing"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/join_drawing_option_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/creating_drawing_option_linear_layout"
        android:layout_marginTop="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/modal_btn">

        <ImageView
            android:id="@+id/join_drawing_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_join_drawing"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_gravity="center"
            android:id="@+id/join_drawing_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join a drawing"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@null"/>
    </LinearLayout>

    <TextView
        android:id="@+id/padding_purposes"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/join_drawing_option_linear_layout">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>